# Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md
DesEngine/: CMakeLists.txt
DesEngine/Primitives/: inner_cube.mtl  monkey.mtl  monkeys.mtl  plane.mtl  realmat.mtl  smooth_cube.mtl  sphere.mtl
DesEngine/Primitives/Soldier/: 2a44ed33.tga  3771d8e2.tga  38dfadc3.tga  4c4b0f6f.tga  80547b5c.tga  aa608c01.tga  b3510b56.tga  c4d9f273.tga  c4ff6350.tga  soldier.mtl
DesEngine/Shaders/: color_index.fsh  color_index.vsh  depth.fsh  depth.vsh  depthp.fsh  depthp.gsh  depthp.vsh  pbr.fsh  pbr.vsh  skybox.fsh  skybox.vsh
DesEngine/include/Classes/: BasicTypes.hpp  CameraObject.hpp  GameMode.hpp  GroupObject.hpp  LightObject.hpp  Material.hpp  MeshObject.hpp  Scene.hpp  SkyBoxObject.hpp  TetCube.hpp  Utils.hpp
DesEngine/include/Interfaces/: Drawable.hpp  Editable.hpp  LogicObject.hpp  Physicable.hpp  Playable.hpp  Serializable.hpp  Transformable.hpp
DesEngine/include/Widgets/: glmainwindow.hpp  glmainwindow.ui  glwidget.hpp  property_ui.hpp  propertywidget.hpp  testwid.hpp
DesEngine/source/Classes/: CameraObject.cpp  GameMode.cpp  GroupObject.cpp  LightObject.cpp  LogicObject.cpp  Material.cpp  MeshObject.cpp  Physicable.cpp  Scene.cpp  Serializable.cpp  SkyBoxObject.cpp  TetCube.cpp  Utils.cpp
DesEngine/source/Widgets/: glmainwindow.cpp  glmainwindow.ui  glwidget.cpp  glwidget.ui  property_ui.cpp  property_ui.ui  propertywidget.cpp  propertywidget.ui  testwid.cpp  testwid.ui
Tasks/: CMakeLists.txt  main.cpp  testwindow.cpp  testwindow.hpp  testwindow.ui
Test/: CMakeLists.txt  main.cpp
Test/Shaders/: line.fsh  line.vsh
Test/include/: Bezier3.hpp
Test/source/: Bezier3.cpp
